--- a/dthesis_template/inputs/Detector.tex
+++ b/dthesis_template/inputs/Detector.tex
@@ -1,1 +1,35 @@
-\chapter{Description of the Detector}
+\chapter{ピクセル検出器}
+この章では，3章以降を理解するために必要な知識についてまとめる．
+
+\section{HL-LHC ATLAS実験用新型ASIC・RD53A}
+ピクセル検出器からの信号は，検出器に直接接続された電気回路で最初に処理される．この電気回路をフロントエンドエレクトロニクスと呼ぶ．この回路は，全て専用の信号読み出し用ASIC内に実装されている．そのため，フロントエンドASICと呼ぶこともあるが，以降ではASICと呼ぶことにする．\\
+この回路を用いて検出器からの微弱な電気信号を受け取り，計測用のシステムに最適化した応答をするように信号をアンプ回路や波形整形回路などで調整する．さらに，コンピュータでの解析処理や，データの保存のためにアナログ信号をデジタル信号に変換する．\\
+以下にピクセル検出器と読み出しASICの接続図を示す．ピクセル検出器の各チャンネルとASICはバンプボンディングという手法で接合し， ASICでは検出器からの信号に対して処理を行う．\\
+
+\subsection{新型ASIC・RD53A}
+現在実機に向けたASICのプロトタイプとして，RD53Aが開発されている．本論文で用いるピクセル検出器には，
+
+\subsection{RD53Aフロントエンドデザイン}
+RD53Aはプロトタイプ版のため，Synchronase Frontend, Linear Frontend, Differential Frontendと，3つの異なるフロントエンドデザインが存在する．今回は実機で利用されることが想定されているDifferential Frontend（以下：Diff FE）について詳しく説明する．
+
+\subsection{Diff FEの仕組み}
+3つのフロントエンドで大きく異なるのは，アナログ回路部分の構造である．Diff FEのアナログ回路構造を以下に示す．\\
+
+\subsection{レジスタ}
+RD53Aには回路の設定値を保存するレジスタが用意されている．RD53Aのレジスタは2種類存在し，
+
+\subsection{HitOR信号}
+RD53Aには，現行のFEI4に実装されているセルフトリガ機能がない代わりに，HitORというセンサに荷電粒子が入射したタイミングで，出力される信号が存在する．HitOR出力の仕組みを以下に示す．
+
+\section{粒子線に対する応答評価試験について}
+この章では，粒子線に対する応答評価試験の意義と手法について述べる．
+\subsection{応答評価試験の意義}
+HL-LHC ATLAS実験に向けたピクセル検出器量産に際して，全ての検出器モジュールに対して，品質管理のための試験を行う．この試験項目の1つとして，粒子線に対する応答評価試験（以下:ソーススキャン）が設けられている．\\
+前章でも述べたように，ピクセル検出器の各チャンネルとASICはバンプボンディングという手法で接続されている．このバンプボンディングに異常がないかどうかを確認するための試験が，ソーススキャンである．\\
+
+\subsection{応答評価試験の手法}
+ソーススキャンには，主に2種類の手法がある．1つは，センサに荷電粒子が入射した時の信号を取得したタイミングでデータ取得を行う，セルフトリガと呼ばれる手法．もう1つは，センサの上にシンチレータ，その上に粒子線源を設置し，シンチレータに粒子線が入射した時の信号を取得したタイミングでデータ取得を行う手法である．\\
+今回はこれら2種類の手法を用いてソーススキャンを行い，どのような試験結果の振る舞いがなされるかの検証を行なった．\\
+今回用いた読み出しASIC・RD53Aには，セルフトリガ機能が実装されていないため，HitOR信号を外部に出力し，FPGAを用いて処理することでデータ取得を行なった．
+
+
