--- a/dthesis_template/inputs/Detector.tex
+++ b/dthesis_template/inputs/Detector.tex
@@ -1,22 +1,46 @@
 \chapter{ピクセル検出器}
 この章では，3章以降を理解するために必要な知識についてまとめる．
 
-\section{HL-LHC ATLAS実験用新型ASIC・RD53A}
-ピクセル検出器からの信号は，検出器に直接接続された電気回路で最初に処理される．この電気回路をフロントエンドエレクトロニクスと呼ぶ．この回路は，全て専用の信号読み出し用ASIC内に実装されている．そのため，フロントエンドASICと呼ぶこともあるが，以降ではASICと呼ぶことにする．\\
-この回路を用いて検出器からの微弱な電気信号を受け取り，計測用のシステムに最適化した応答をするように信号をアンプ回路や波形整形回路などで調整する．さらに，コンピュータでの解析処理や，データの保存のためにアナログ信号をデジタル信号に変換する．\\
-以下にピクセル検出器と読み出しASICの接続図を示す．ピクセル検出器の各チャンネルとASICはバンプボンディングという手法で接合し， ASICでは検出器からの信号に対して処理を行う．\\
+\section{ピクセル検出器概要}
+この節では，ピクセル検出器の構成について説明する．以下にピクセル検出器の構造図を示す．ピクセル検出器はFlex基板，フロントエンドASIC，シリコンピクセルセンサの3要素で構成されている．
 
-\subsection{新型ASIC・RD53A}
-現在実機に向けたASICのプロトタイプとして，RD53Aが開発されている．本論文で用いるピクセル検出器には，
+\section{シリコンピクセルセンサ}
+この節では，ピクセル検出器を構成する要素の1つであるシリコンピクセルセンサについて説明する．
+\subsection{シリコンピクセルセンサの原理}
+シリコンセンサの動作原理は半導体に従う．この節では，半導体の基本原理と性質について述べる．
+\subsubsection{半導体}
+物質は導体，絶縁体，半導体の3種に分類することができる．これは，電気抵抗値によって決まっており，半導体は導体と絶縁体の中間の値をもつ．一般に室温で，$10^{-2}$から$10^9 \Omega cm$の範囲に分類される．典型的な半導体物質にはシリコン，ゲルマニウム，ガリウムヒ素などがあげられる．\\
+エネルギーバンド\\
+ドナーとアクセプタ
+
+\subsection{バイアス構造}
+シリコンピクセルセンサには，製造時に良品不良品を選別するための高電圧用のバイアス構造が備わっている．\\
+バンプボンディングの前にセンサのみの試験を行い，動作不良センサを取り除く品質評価の工程がある．このピクセルセンサ評価方法として，$IV$測定がある．$IV$測定には全てのピクセルが$GND$に落とされている必要があり，また，各ピクセルは分離されている必要がある．そのために必要になるのがバイアス構造である．バイアス構造は，ピクセル間にバイアスレールを置き，そこから各ピクセルにバイアス抵抗を引く．この構造により，ピクセルは$GND$と同電位とすることができ，また，各ピクセルが抵抗により，分離される．
+
+\subsection{今回使用したシリコンピクセルセンサ構造}
+本論文で扱うプクセルセンサの表面構造について述べる．上から見たセンサの様子である．ピクセルセンサは2次元的に電極が配列されており，センサのみのテストのためにバイアスレールが敷かれている．
+
+
+\section{HL-LHC ATLAS実験用新型ASIC・RD53A}
+この節では，ピクセル検出器からの信号は，検出器に直接接続された電気回路で最初に処理される．この電気回路をフロントエンドエレクトロニクスと呼ぶ．この回路は，全て専用の信号読み出し用ASIC内に実装されている．そのため，フロントエンドASICと呼ぶこともあるが，以降ではASICと呼ぶことにする．\\
+この回路を用いて検出器からの微弱な電気信号を受け取り，計測用のシステムに最適化した応答をするように信号をアンプ回路や波形整形回路などで調整する．さらに，コンピュータでの解析処理や，データの保存のためにアナログ信号をデジタル信号に変換する．\\
+以下にピクセル検出器と読み出しASICの接続図を示す．ピクセル検出器の各チャンネルとASICはバンプボンディングという手法で接合し，ASICでは検出器からの信号に対して処理を行う．\\
 
 \subsection{RD53Aフロントエンドデザイン}
 RD53Aはプロトタイプ版のため，Synchronase Frontend, Linear Frontend, Differential Frontendと，3つの異なるフロントエンドデザインが存在する．今回は実機で利用されることが想定されているDifferential Frontend（以下：Diff FE）について詳しく説明する．
 
-\subsection{Diff FEの仕組み}
+\subsubsection{Diff FEの仕組み}
 3つのフロントエンドで大きく異なるのは，アナログ回路部分の構造である．Diff FEのアナログ回路構造を以下に示す．\\
 
 \subsection{レジスタ}
-RD53Aには回路の設定値を保存するレジスタが用意されている．RD53Aのレジスタは2種類存在し，
+ASICには，アナログ回路とデジタル回路の振る舞いを調節するために，回路の動作を制御する設定値を保持するレジスタが存在する．RD53Aのレジスタは2種類存在し，全てのピクセルに共通の設定を保存するグローバルレジスタ（GR）と各ピクセルの設定値を保持するピクセルレジスタ（PR）がある．
+\begin{itemize}
+\item グローバルレジスタ
+  RD53Aには137個のGRがあり，ピクセルに共通が閾値(threshold)，回路のオンオフなどを設定することができる．
+\item ピクセルレジスタ
+  Synchronus Frontendには3 $bit$，その他の2つのフロントエンドには8 $bit$のレジスタがある．ピクセルのデジタル回路のオンオフや閾値(threshold)を設定することができる．
+\end{itemize}
+
 
 \subsection{HitOR信号}
 RD53Aには，現行のFEI4に実装されているセルフトリガ機能がない代わりに，HitORというセンサに荷電粒子が入射したタイミングで，出力される信号が存在する．HitOR出力の仕組みを以下に示す．
