--- a/dthesis_template/inputs/Setup.tex
+++ b/dthesis_template/inputs/Setup.tex
@@ -1,25 +1,46 @@
-\chapter{粒子線に対する応答評価試験のための読み出しシステムの開発}
+\chapter{粒子線に対する応答評価試験のための読み出しシステムの動作試験}
 この章では，粒子線に対する応答評価試験のために行なった，外部トリガを処理する機能の追加と，応答評価試験のための準備について述べる．
 
-\section{読み出しシステム概要}
+\section{読み出しセットアップ概要}
 以下に読み出しシステムの概要を示す．主にRD53A搭載のSingle Chip Card（SCC）とFPGAボード，PCを用いて読み出しシステムを構成している．今回は読み出しASICとFPGAボードは，HPC-mDP変換ボードを用いてケーブルにて接続を行い，FPGA内部でASICからのデータ信号の処理を行なった．また，高速通信用インターフェースでPCとFPGAボードを接続し，データ転送を行なった．\\
-
-\includegraphics[width=5cm,pagebox=cropbox,clip]{figures/test.pdf}
-
 
 \subsection{PC}
 \subsection{FPGAボード}
+Xilinx, Inc.のKintex-7 FPGA搭載KC705評価ボードを使用．このFPGAボードは，研究室規模の実験で使うことを想定しているため，FPGA評価ボードは一般的に流通してて入手性がよいため，このFPGAボードを使用している．
 \subsection{アダプタカード}
 \subsection{RD53A搭載Single Chip Cardモジュール}
+\subsection{$\beta$線源}
+今回は粒子線として$\beta$線源であるストロンチウム90を使用した．使用した線源の現在の放射能は以下のように計算した．
 
-\section{外部トリガを処理する機能の追加}
-本章では，シリコンピクセルセンサが接続されたRD53Aから出力されるHitOR信号を外部トリガに用いて，機能の動作を検証する．センサ付きRD53Aが搭載された基盤の写真を以下に示す．RD53Aは細い金属ワイヤにより基板上の回路パターンと電気的に接続されている．基板にRD53Aが外部と通信するためのコネクタ，電源供給のためのコネクタ，センサからの信号を外部に出力するためのコネクタ，センサに電圧を印加するためのコネクタが実装されている．RD53Aとのデジタル通信は，コネクタを介して行う．
+\section{読み出し試験}
+ソーススキャンを行うために，既存のKC705用YARRファームウェアに外部トリガを処理する機能を追加した．本節では，機能を追加したファームの動作確認について述べる．
 
-\subsection{概要}
+\subsection{コマンド信号とデータ信号の確認}
+オシロスコープでコマンド信号とデータ信号をRD53A SCC上でプローブし，波形を確認した．
+
+\subsection{デジタルスキャン}
+全ピクセルのデジタル回路とアナログ回路に複数回擬似パルスを注入して，注入した回数のうち何回応答が返ってくるのかを確認する．それぞれの作業をデジタルスキャン，アナログスキャンと呼ぶ．全ピクセルごとの回路の応答を確認し，データの転送線，FPGA内部の処理，PCへの通信の各経路でデータの損失がないことを確認するのに有効である．
+
+\subsection{アナログスキャン}
+アナログ回路に複数回擬似パルスを注入して，注入した回路のうち何回応答が返ってくるのかを確認した．この作業をアナログスキャンと呼ぶ．今回はDiff FEのみを使用するので，その他のフロントエンドは，グローバルレジスタの''CoreColEnSyn1/2''，''CoreColLin1/2''を全て0にすることで非使用に設定した．また，Diff FE内接続されているピクセルセンサの上下構造の違いにより，上半分にノイズが多く現れるため，れを防ぐために，Diff FEのアナログ回路のLCC回路の部分をオンにする．これは，グローバルレジスタ''DiffLccEn''という値を0から1に変更することでオンにすることができる．以下にLCC回路をオフにした場合，オンにした場合それぞれのDiff FEのアナログスキャンの結果を示す．
+
+\subsection{閾値のチューニング}
+閾値を全ピクセルで均一に揃えるようにチューニングを行う．今回はDiff FEのみを使用したため，Diff FE内のピクセルのみをチューニング対象とした．まず，アナログ回路にキャリブレーション用のテストパルス$V_{cal}$を複数回注入して，注入回数のうち，応答が返ってくる割合から応答率を得る．
+
+\subsection{ノイズスキャン}
+引き続きDiff FEのみを使用した．任意の周波数でトリガを送り，その時のアナログ回路からの応答に対して，閾値を超えるものを非使用に設定する．この作業をノイズスキャンと呼ぶ．今回は20000 $Hz$で5分間ノイズスキャンを行なった．ノイズスキャンを行なう前と行なった後のノイズスキャンの結果を示す．
 
 
-\section{読み出し準備}
-\subsection{閾値チューニング}
-\subsection{Latencyチューニング}
+\subsection{HitOR信号の伝達確認}
+モジュールの上に$\beta$線源を配置し，オシロスコープでHitOR信号をRD53A SCC上でプローブすることで，波形を確認した．また，FPGAまでHitOR信号が伝わっているかどうか，正常に処理され，そのタイミングでトリガが出力されているかどうかをVivadoのLogic Analyzerを用いて確認した．それが以下の図である．
+
+
+
+このようにファームウェアに外部トリガを取得し，処理する機能を追加できていることを確認した．
+
+
+
+本節では，シリコンピクセルセンサが接続されたRD53Aから出力されるHitOR信号を外部トリガに用いて，機能の動作を検証する．センサ付きRD53Aが搭載された基盤の写真を以下に示す．RD53Aは細い金属ワイヤにより基板上の回路パターンと電気的に接続されている．基板にRD53Aが外部と通信するためのコネクタ，電源供給のためのコネクタ，センサからの信号を外部に出力するためのコネクタ，センサに電圧を印加するためのコネクタが実装されている．RD53Aとのデジタル通信は，コネクタを介して行う．
+
 
 
