--- a/dthesis_template/main.tex
+++ b/dthesis_template/main.tex
@@ -18,12 +18,11 @@
 
 \mainmatter
 \input{inputs/Introduction}
-\input{inputs/Physics}
 \input{inputs/Detector}
+\input{inputs/Setup}
 \input{inputs/ObjectDefinition}
 \input{inputs/SignalOptimisation}
 \input{inputs/BGestimation}
-\input{inputs/Systematics}
 \input{inputs/Results}
 \input{inputs/Conclusion}
 
