--- a/dthesis_template/main.tex
+++ b/dthesis_template/main.tex
@@ -20,8 +20,8 @@
 \input{inputs/Introduction}
 \input{inputs/Detector}
 \input{inputs/Setup}
-\input{inputs/ObjectDefinition}
-\input{inputs/SignalOptimisation}
+\input{inputs/Selftrig}
+\input{inputs/Exttrig}
 \input{inputs/BGestimation}
 \input{inputs/Results}
 \input{inputs/Conclusion}
