--- a/dthesis_template/inputs/Exttrig.tex
+++ b/dthesis_template/inputs/Exttrig.tex
@@ -1,6 +1,17 @@
 \chapter{外部トリガを用いた応答評価試験}
 この章では，外部トリガを用いた粒子線に対する応答評価試験について述べる．
 
-\section{応答評価試験セットアップ}
+\section{外部トリガを用いた応答評価試験セットアップ}
 RD53Aの量産にあたって，行われる品質試験では，外部トリガを用いた応答評価試験が行われる．そのため，実際に行われる試験環境に近いセットアップで試験を行なった．セットアップの写真を以下に示す．
+実際に行われる試験環境はクーリングボックスと呼ばれる，温度が低温に維持された小さな箱の中で行う．それに合う応答評価試験セットアップを考えるにあたって，線源とシンチレータ，シンチレータの光信号を電気信号に変換するMPPCが乗ったソースホルダと，MPPCからのアナログ信号を波形整形し，LVDSのデジタル信号に変換するような基板の設計を行なった．
 
+\subsection{ソースホルダの設計}
+ソースホルダの外観を以下に示す．クーリングボックス内で使用することを想定し，コンパクトな作りになっている．これは，FreeCADというオープンソース汎用3D CADモデラで設計し，3Dプリンタを用いて作成した．
+
+\subsection{MPPCからの信号を波形整形する回路}
+MPPCからの信号を波形整形する回路は以下のようになっている．\\
+大きく，電圧供給回路，反転増幅回路，コンパレータ回路，LVDS変換回路から構成されている．基板はKiCADというCERN開発のオープンソースプリント基板CADを用いて設計し，によって作成した．
+
+\section{応答評価試験手順}
+\section{応答評価試験結果}
+\section{考察}
