--- a/dthesis_template/main.tex
+++ b/dthesis_template/main.tex
@@ -6,8 +6,8 @@
 
 \setcounter{secnumdepth}{3} % show subsubsection numbers
 
-\putTitle{Title of your thesis}
-\putAuthor{The Author}{Department of Physics, A University}
+\putTitle{HL-LHC ATLAS実験に向けたシリコンピクセル検出器の粒子線に対する応答評価試験}
+\putAuthor{鷲津 優維}{お茶の水女子大学 人間文化創成科学研究科 理学専攻}
 \date{\today}
 
 \begin{document}
@@ -22,8 +22,6 @@
 \input{inputs/Setup}
 \input{inputs/Selftrig}
 \input{inputs/Exttrig}
-\input{inputs/BGestimation}
-\input{inputs/Results}
 \input{inputs/Conclusion}
 
 \input{inputs/Acknowledgement}
