--- a/dthesis_template/inputs/Detector.tex
+++ b/dthesis_template/inputs/Detector.tex
@@ -1,5 +1,8 @@
-\chapter{ピクセル検出器}
+\chapter{アップグレードに向けたモジュール量産}
 この章では，3章以降を理解するために必要な知識についてまとめる．
+
+\section{概要}
+前章で述べたように，HL-LHC計画に伴い，内部飛跡検出器のアップグレードが計画されている．内部飛跡検出器の総入れ替えを予定しているため，内部に用いるピクセルモジュールの量産が必要である．それにあたって，世界で約10000個のモジュールの量産が計画されており，日本グループはそのうちの約2000個を担当する予定になっている．
 
 \section{ピクセル検出器概要}
 この節では，ピクセル検出器の構成について説明する．以下にピクセル検出器の構造図を示す．ピクセル検出器はFlex基板，フロントエンドASIC，シリコンピクセルセンサの3要素で構成されている．
