--- a/dthesis_template/inputs/Introduction.tex
+++ b/dthesis_template/inputs/Introduction.tex
@@ -98,8 +98,10 @@ Fast Track Trigger(FTK)が導入され，TGCの最内層が取り替えられる
 \subsubsection*{Pixel検出器のアップグレード}
 HL-LHCにおける高い放射線環境とヒット占有率の増加に対応するため，Pixelはより放射線耐性の高いもの，よりピクセルサイズが小さいものへの変更が要求される．飛跡再構成の性能を維持するために，衝突ごとに発生する粒子の密度が5倍程度増加することに合わせ，ピクセルのサイズを現行のPixelの1/5まで小さくし，チャンネル数を5倍に増やしたセンサを配置する．それにあわせて，ピクセル検出器からの信号を読み出すためのの特定用途向け集積回路についても現行と比べてより性能が高いものが要求される．ASICについては以降述べる．\\
 
-\subsubsection*{日本グループの挙動}
-内部飛跡検出器のアップグレードに向けて，日本グループでは
+\subsection{アップグレードに伴うモジュールの量産}
+前節でも述べたように，HL-LHC計画に伴い，内部飛跡検出器の総入れ替えが計画されている．これにあたって，内部に用いるピクセルモジュールの量産が必要となる．そのため，世界で約10000個のモジュールの量産が計画されており，日本グループはそのうちの約2000個を担当する予定になっている．\\
+
+
 
 
 %LHCは2010年から運転を開始し，7TeVから8TeVの重心系エネルギーで2012年まで稼働した．この期間をLHC Run1と呼び，瞬間最高ルミノシティは$0.77\times10^{34} \mathrm{cm^{-2}s^{-1}}$であった．その後，2013年から2015年までのシャットダウン期間で加速器のアップグレードを行い，2015年からは重心系エネルギー$13\mathrm{TeV}$でLHC Run2が始まり，2018年まで続いた．Run2の3年間で得られた積分ルミノシティは約$150\mathrm{fb}^{-1}$であった．\\
