--- a/dthesis_template/inputs/Introduction.tex
+++ b/dthesis_template/inputs/Introduction.tex
@@ -1,6 +1,5 @@
 \chapter{LHC ATLAS実験}
-本章では，LHC加速器について述べ，ATLAS実験について，また，ATLAS検出器の構造について述べる．そののち，LHCアップグレード計画・HL-LHC計画について説明し，それに伴いATLAS検出器に要求されるアップグレードについて述べる．
-
+本章では，LHC加速器について述べ，ATLAS実験について，また，ATLAS検出器について述べる．そののち，High Luminosity LHC計画について説明し，それに伴うATLAS検出器アップグレードについて説明する．
 \section{LHC加速器}
 Large Hadron Collider（LHC）はスイス、ジュネーブにある欧州原子核研究機構（CERN）の地下100m，周長26.7kmのリングで構成される円形加速器である．最大で14TeVの重心系エネルギーで陽子陽子衝突させることが可能な，世界最大の陽子陽子衝突型加速器である．新粒子の探索や，ヒッグス粒子やトップクォーク等の質量が大きい粒子を多く生成できるので，結合定数などの精密測定も行うことが可能である．LHCには，陽子・陽子衝突点を4点設けていて，各衝突点に，衝突に伴う生成粒子の観測を目的として，大型の検出器(ATLAS, ALICE, CMS, LHCb)が配置されている．2017年に陽子ビームのエネルギーが6.5 $\mathrm{TeV}$，重心系衝突エネルギーでは13$\mathrm{TeV}$，瞬間ルミノシティは$2\times 10^34 \mathrm{cm^{-2}s^{-1}}$で物理実験が行われている．図\ref{fig:LHC}にLHC加速器の全体図を示す．LHCでは，陽子はバンチという塊で連なりビームを形成し，25 $\mathrm{ns}$に1回，すなわち40 $\mathrm{MHz}$でバンチ同士の衝突が行われている．\\
 
@@ -96,11 +95,11 @@ Fast Track Trigger(FTK)が導入され，TGCの最内層が取り替えられる
 以上の理由により，内部飛跡検出器の全てをシリコン検出器にし，Pixel，SCTの領域を拡張し，TRTを廃止する予定である．\\
 
 \subsubsection*{Pixel検出器のアップグレード}
-HL-LHCにおける高い放射線環境とヒット占有率の増加に対応するため，Pixelはより放射線耐性の高いもの，よりピクセルサイズが小さいものへの変更が要求される．飛跡再構成の性能を維持するために，衝突ごとに発生する粒子の密度が5倍程度増加することに合わせ，ピクセルのサイズを現行のPixelの1/5まで小さくし，チャンネル数を5倍に増やしたセンサを配置する．それにあわせて，ピクセル検出器からの信号を読み出すためのの特定用途向け集積回路についても現行と比べてより性能が高いものが要求される．ASICについては以降述べる．\\
+HL-LHCにおける高い放射線環境とヒット占有率の増加に対応するため，Pixelはより放射線耐性の高いもの，よりピクセルサイズが小さいものへの変更が要求される．飛跡再構成の性能を維持するために，衝突ごとに発生する粒子の密度が5倍程度増加することに合わせ，ピクセルのサイズを現行のPixelの1/5まで小さくし，チャンネル数を5倍に増やしたセンサを配置する．それにあわせて，ピクセル検出器からの信号を読み出すためのの特定用途向け集積回路についても現行と比べてより性能が高いものが要求される．現在はその要求を満たす新型ASICのプロトタイプ版が完成している．．\\
 
 \subsection{アップグレードに伴うモジュールの量産}
 前節でも述べたように，HL-LHC計画に伴い，内部飛跡検出器の総入れ替えが計画されている．これにあたって，内部に用いるピクセルモジュールの量産が必要となる．そのため，世界で約10000個のモジュールの量産が計画されており，日本グループはそのうちの約2000個を担当する予定になっている．\\
-
+現在，新型ASICのプロトタイプ版が1チップ接続されたシングルチップモジュールが生成されており，2月ごろに4チップ接続されたクアッドチップモジュールが完成する予定である．このクアッドチップモジュールを用いて，量産体制の確認が行われ，実機で用いられる新型ASIC付きモジュールの量産に向けた体制が見直される計画である．
 
 
 
