--- a/dthesis_template/ThesisTemplate.sty
+++ b/dthesis_template/ThesisTemplate.sty
@@ -18,7 +18,11 @@ linkcolor=black,bookmarksnumbered=true,citecolor=black,bookmarks=true]{hyperref}
 \usepackage{booktabs}
 \usepackage{enumitem}
 \usepackage{mathptmx}
+\usepackage[version=3]{mhchem}
 \usepackage[small]{caption}
+\usepackage[subrefformat=parens]{subcaption}
+\captionsetup{compatibility=false}
+%\usepackage{subfigure}
 \bibliographystyle{junsrt}
 
 %% definition of words
