--- a/dthesis_template/inputs/Setup.tex
+++ b/dthesis_template/inputs/Setup.tex
@@ -94,10 +94,34 @@ $\beta$線の今回用いた$\beta$線源は2017/02/13時点で$ 5.00 \times 10^
 オシロスコープでコマンド信号とデータ信号をRD53A SCC上でプローブし，波形を確認した．
 
 \subsection{デジタルスキャン}
-全ピクセルのデジタル回路に複数回擬似パルスを注入して，注入した回数のうち何回応答が返ってくるのかを確認する．この作業をデジタルスキャンと呼ぶ．全ピクセルごとの回路の応答を確認し，データの転送線，FPGA内部の処理，PCへの通信の各経路でデータの損失がないことを確認するのに有効である．
+全ピクセルのデジタル回路に複数回擬似パルスを注入して，注入した回数のうち何回応答が返ってくるのかを確認する．この作業をデジタルスキャンと呼ぶ．全ピクセルごとの回路の応答を確認し，データの転送線，FPGA内部の処理，PCへの通信の各経路でデータの損失がないことを確認するのに有効である．図\ref{fig:digital}に100回擬似パルスを注入した時の応答数の分布を示す．
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=7cm]{./figure/DigitalScan.png}
+  \caption{デジタルスキャン}
+  \label{fig:digital}
+\end{figure}
+
 
 \subsection{アナログスキャン}
-アナログ回路に複数回擬似パルスを注入して，注入した回路のうち何回応答が返ってくるのかを確認した．この作業をアナログスキャンと呼ぶ．今回はDiff FEのみを使用するので，その他のフロントエンドは，グローバルレジスタの''EnCoreColSync1/2''，''EnCoreColEnLin1/2''を全て0にすることで非使用に設定した．また，Diff FE内接続されているピクセルセンサの上下構造の違いにより，上半分にノイズが多く現れるため，それを防ぐために，Diff FEのアナログ回路のLCC回路の部分をオンにする．これは，グローバルレジスタ''DiffLccEn''という値を0から1に変更し，''DiffLcc''を255にすることでオンにすることができる．以下にLCC回路をオフにした場合，オンにした場合それぞれのDiff FEのアナログスキャンの結果を示す．
+アナログ回路に複数回擬似パルスを注入して，注入した回路のうち何回応答が返ってくるのかを確認した．この作業をアナログスキャンと呼ぶ．今回はDiff FEのみを使用するので，その他のフロントエンドは，グローバルレジスタの''EnCoreColSync1/2''，''EnCoreColEnLin1/2''を全て0にすることで非使用に設定した．また，Diff FE内接続されているピクセルセンサの上下構造の違いにより，上半分にノイズが多く現れるため，それを防ぐために，Diff FEのアナログ回路のLCC回路の部分をオンにする．これは，グローバルレジスタ''DiffLccEn''という値を0から1に変更し，''DiffLcc''を255にすることでオンにすることができる．図\ref{fig:analog1}にLCC回路をオフにした場合，図\ref{fig:analog2}オンにした場合それぞれのDiff FEのアナログスキャンの結果を示す．LCC回路をオフにすると，上部の横端にノイズが多く発生してしまうため，ASICのピクセルが非使用に設定されてしまう．LCC回路をオンにすることで，ノイズの量が減り，センサの面積を有効に利用することができる．
+
+\begin{figure}[h]
+  \centering
+  \begin{minipage}[b]{0.4\linewidth}
+    \centering
+    \includegraphics[width=6cm]{./figure/AnalogScan1.png}
+    \subcaption{LCC回路をオフ}
+    \label{fig:analog1}
+  \end{minipage}
+  \begin{minipage}[b]{0.4\linewidth}
+    \includegraphics[width=6cm]{./figure/AnalogScan3.png}
+    \subcaption{LCC回路をオン}
+    \label{fig:analog2}
+  \end{minipage}
+  \caption{アナログスキャン}
+\end{figure}
+
 
 \subsection{閾値のチューニング}
 閾値とはピクセルの応答率が50$\mathrm{\%}$となる電荷量で定義される，ピクセルごと閾値を決めるDAC値を調節することによってピクセルごとの閾値を揃える．この作業を閾値のチューニングという．図\ref{fig:scurve}は，注入電荷を変化させながら，各ピクセルに試験電荷を複数回入射したときの応答数の概念図である．この閾値をチューニング目標値になるように，各ピクセルのパラメータを変更する．
