--- a/dthesis_template/inputs/Detector.tex
+++ b/dthesis_template/inputs/Detector.tex
@@ -1,12 +1,12 @@
 \chapter{アップグレードに向けたモジュール量産}
-前章で述べたように，HL-LHC計画に伴い，内部飛跡検出器のアップグレードが計画されている．本章では，それに伴う，モジュールの量産について説明し，モジュールの構成，要素であるシリコンセンサの原理，フロントエンドASICについて述べ，モジュールの量産について必要な試験項目について説明する．
+前章で述べたように，HL-LHC計画に伴い，内部飛跡検出器のアップグレードが計画されている．本章では，それに伴う，モジュールの量産について説明し，モジュールの構成，要素であるシリコンセンサの原理，フロントエンドASICについて述べ，モジュールの量産について必要な試験項目について説明する．\\
 
 \section{モジュール量産}
 HL-LHC計画にあたって，内部飛跡検出器の総入れ替えを予定しているため，内部に用いるピクセルモジュールの量産が必要である．世界で約10000個のモジュールの量産が計画されており，日本グループはそのうちの約2000個を担当する予定になっている．\\
-現在は，実機で用いるモジュールを量産するための準備として，プロトタイプ版のモジュールで量産体制の確認が計画されている．プロトタイプ版のモジュールは2月ごろに完成が予定されている．
+現在は，実機で用いるモジュールを量産するための準備として，プロトタイプ版のモジュールで量産体制の確認が計画されている．プロトタイプ版のモジュールは2月ごろに完成が予定されている．\\
 
 \section{ピクセルモジュールの構成}
-この節では，ピクセル検出器の構成について説明する．以下にピクセル検出器の構造図を示す．ピクセル検出器はFlex基板，フロントエンドASIC，シリコンピクセルセンサの3要素で構成されている．
+この節では，ピクセル検出器の構成について説明する．以下にピクセル検出器の構造図を示す．ピクセル検出器はFlex基板，フロントエンドASIC，シリコンピクセルセンサの3要素で構成されている．\\
 
 
 \section{シリコンピクセルセンサ}
