--- a/dthesis_template/main.tex
+++ b/dthesis_template/main.tex
@@ -1,6 +1,7 @@
 \documentclass[a4paper,11pt,twoside,openright]{Thesis}
 
 \usepackage[japanese,master]{ThesisTemplate}
+\usepackage{indentfirst}
 %% オプション"japanese"を消すと英語化されます。
 %% 論文種類は、phd, master, bachelor の3種類です。(デフォルトはphd)
 
