--- a/dthesis_template/inputs/Selftrig.tex
+++ b/dthesis_template/inputs/Selftrig.tex
@@ -1,23 +1,39 @@
 \chapter{セルフトリガを用いた応答評価試験}
-この章では，セルフトリガを用いた粒子線に対する応答評価試験について述べる．
+この章では，セルフトリガを用いた粒子線に対する応答評価試験について述べる．\ref{sec:latency}節で粒子線を用いた応答評価試験のために必要だったLatencyチューニング機能について述べ，そのあとに，\ref{sec:selfsetup}節で評価試験セットアップ，\ref{sec:selfhow}節で手順，\ref{sec:selfconc}節で取得データの結果を示し，\ref{sec:selfsum}節で考察を行なっている．
 
 \section{Latencyチューニング機能の追加}
+\label{sec:latency}
 この節では，粒子線に対する応答評価のために必要だったLatencyチューニング機能について述べる．
 \subsection{YARRにおけるトリガDAQとLatencyの意義}
-YARRソフトウェアを用いたデータ取得におけるトリガDAQについて説明する図を以下に示す．\\
-Latencyとは，図のtrigger入力時にどれだけの時間遡ってメモリから情報を読み出すかを定める値である．このLatencyがずれていると，データを正しく読み出すことができない．YARRでは，指定されたLatency分遡ったClockの前8 $\mathrm{Clock}$，後7 $\mathrm{Clock}$，計16 $\mathrm{Clock}$分のデータを読み出す．16 $\mathrm{Clock}$の中で何 $\mathrm{Clock}$目のデータであるかを示す値として，L1IDというものが記録される．アナログスキャンにおけるL1IDの分布を以下に示す．\\
+YARRソフトウェアを用いたデータ取得におけるトリガDAQについて説明する図を図\ref{fig:YARRDAQ}に示す．\par
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=13cm]{./figure/DAQ_signal.pdf}
+  \caption{YARRトリガDAQ}
+  \label{fig:YARRDAQ}
+\end{figure}
+
+Latencyとは，図のtrigger入力時にどれだけの時間遡ってメモリから情報を読み出すかを定める値である．このLatencyがずれていると，データを正しく読み出すことができない．YARRでは，指定されたLatency分遡ったClockの前8 $\mathrm{Clock}$，後7 $\mathrm{Clock}$，計16 $\mathrm{Clock}$分のデータを読み出す．16 $\mathrm{Clock}$の中で何 $\mathrm{Clock}$目のデータであるかを示す値として，L1IDというものが記録される．アナログスキャンにおけるL1IDの分布を以下に示す．\par
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=8cm]{./figure/DigitalScan.png}
+  \caption{YARRトリガDAQ}
+  \label{fig:YARRDAQ}
+\end{figure}
+
+
 理想的にはL1IDが7のところにトリガの中心を合わせたい．そのために，YARRで指定できるLatencyに関する3種類のパラメータを以下に示す．
 \subsubsection*{delay}
 ソフトウェアを通してファームを制御する．
 \subsubsection*{delay}
 ソフトウェアを通してファームを制御する．
 \subsubsection*{グローバルレジスタ''LatencyConfig''}
-RD53Aの全てのピクセルに共通する設定値であるグローバルレジスタの内の1つにLatencyConfigというLatencyに関する設定値が存在する．LatencyConfigがどのような値であるか説明する図を以下に示す．\\
-ASICのあるピクセルが信号を検知すると，そのピクセルが40 $\mathrm{MHz}$のClockに合わせてカウントを始める．そして，FPGAから送られてくるトリガを受け取った時に，そのカウントが設定した''LatencyConfig''の値と等しいピクセルの情報を読み出すようになっている．\\
+RD53Aの全てのピクセルに共通する設定値であるグローバルレジスタの内の1つにLatencyConfigというLatencyに関する設定値が存在する．LatencyConfigがどのような値であるか説明する図を以下に示す．\par
+ASICのあるピクセルが信号を検知すると，そのピクセルが40 $\mathrm{MHz}$のClockに合わせてカウントを始める．そして，FPGAから送られてくるトリガを受け取った時に，そのカウントが設定した''LatencyConfig''の値と等しいピクセルの情報を読み出すようになっている．\par
 ''LatencyConfig''は，9bitの値であり，0-511まで変化させることが可能である．
 
 \subsection{Latencyチューニング機能}
-前節で述べたように，Latencyが合っていないと，データを正しく読み出すことができないので，Latencyを正しい値にすることが，データを正しく読み出す上で大変重要となる．そこで，今回はグローバルレジスタ''LatencyConfig''値を変化させることで，Latencyを合わせられるような機能をYARRに追加した．\\
+前節で述べたように，Latencyが合っていないと，データを正しく読み出すことができないので，Latencyを正しい値にすることが，データを正しく読み出す上で大変重要となる．そこで，今回はグローバルレジスタ''LatencyConfig''値を変化させることで，Latencyを合わせられるような機能をYARRに追加した．\par
 今回，センサからの信号をASICがHitOR信号として出力したTriggerに対するLatencyを合わせたかった．前章で述べたように，HitOR信号がFPGAに伝わっていることを確認した上で，以下を行なった．
 \begin{enumerate}
 \item セルフトリガによって100イベントを取得する
@@ -42,16 +58,61 @@ ASICのあるピクセルが信号を検知すると，そのピクセルが40 $
 \end{itemize}
 
 \section{セルフトリガを用いた応答試験セットアップ}
+\label{sec:selfsetup}
 主なセットアップは読み出しシステムの動作確認と変わらず，RD53A搭載のSingle Chip Card(SCC)とFPGAボード，PCを用いて読み出しシステムを構成し，センサからの信号を外部に出力するためのコネクタをアダプタカードのport D，RD53Aがコマンドを受け取るためのコネクタをアダプタカードのport Aに繋ぐようにしている．
 
-
 \section{応答試験手順}
-前章で述べたHitOR信号の伝達確認を行なったのち，前節で述べたLatencyチューニングを行った．''LatencyConfig''の分布が図\ref{fig:latencydist}のように得られた．\\
+\label{sec:selfhow}
+前章で述べたHitOR信号の伝達確認を行なったのち，前節で述べたLatencyチューニングを行った．''LatencyConfig''の分布が図\ref{fig:latencydist}のように得られた．\par
 この分布から，今回は''LatencyConfig''の値を211に設定することで，Latencyを合わせた．Latencyを合わせた上で，線源を上をセンサに設置した場合としない場合それぞれについて，30分間のセルフトリガによるデータ取得を行なった．
 
 \section{応答試験結果}
-以下に線源をセンサ上に設置した場合としない場合それぞれの，30分間セルフトリガによるデータ取得結果を示す．
-線源あり，なしの場合で，Ocuppancy Mapの分布に差があることが見て取れるが，数値としては，ヒットレートに大きく変化は無かった．応答評価試験として，センサ-ASIC間の接続確認行うためには，センサからの信号でトリガをかけたデータ取得が行われているか確認する必要がある．すなわち，センサからの信号
+\label{sec:selfconc}
+図\ref{fig:self}と表\ref{tab:self}に線源をセンサ上に設置した場合としない場合それぞれの，30分間セルフトリガによるデータ取得結果を示す．
+
+\begin{table}[h]
+  \centering
+  \caption{線源の有無それぞれのヒットレート}
+  \begin{tabular} {|l|c|c||c|} \hline
+     & \# Hit & 時間[s] & Hitレート[hits/sec] \\  \hline
+    線源なし & $3.528 \times 10^6$ & 1800 & 1960 \\ 
+    線源あり & $3.599 \times 10^6$ & 1800 & 2000 \\ \hline
+  \end{tabular}
+  \label{tab:self}
+\end{table}
+
+\begin{figure}[h]
+  \centering
+  \begin{minipage}[b]{0.45\linewidth}
+    \centering
+    \includegraphics[width=7cm]{./figure/selftrigwo.png}
+    \subcaption{線源を置かない場合}
+    \label{fig:selfwo}
+  \end{minipage}
+  \begin{minipage}[b]{0.45\linewidth}
+    \centering
+    \includegraphics[width=7cm]{./figure/selftrigw.png}
+    \subcaption{線源を置いた場合}
+    \label{fig:selfo}
+  \end{minipage}
+  \caption{ヒットの分布}
+  \label{fig:self}
+\end{figure}
+
+線源あり，なしの場合で，Ocuppancy Mapの分布に差があることが見て取れるが，数値としては，ヒットレートに大きく変化は無かった．応答評価試験として，センサ-ASIC間の接続確認行うためには，センサからの信号でトリガをかけたデータ取得が行われているか確認する必要がある．各ピクセルで線源なし・ありのそれぞれの場合の1ピクセルあたりのHit数分布を図\ref{fig:selfhitfreq}に示す．
+
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=10cm]{./figure/selfhitfreq.png}
+  \caption{1ピクセルあたりのHit数分布}
+  \label{fig:selfhitfreq}
+\end{figure}
+
+このように，線源なしの場合と比較して優位な分布が線源ありの場合に見られる．より詳しく確認するために，以下，線源なしの場合のHit数が0だった場合と，0より大きかった場合に分けて，結果の考察を行なった．
 
 \section{考察}
+\label{sec:selfsum}
+\subsection*{線源なしの時のHit数が0だった場合}
+本研究で使用した線源の放射能が$4.8 \mathrm{kBq}$であったことから，30分間でHit数を3hit以上取得できたピクセルは線源からの信号を取得できていると判断した．
 
+\subsection*{線源なしの時のHit数が0より大きかった場合}
