--- a/dthesis_template/bib/HLLHC_BIB.bib
+++ b/dthesis_template/bib/HLLHC_BIB.bib
@@ -1,3 +1,20 @@
+@article{Collaboration_2008,
+	doi = {10.1088/1748-0221/3/08/s08003},
+	url = {https://doi.org/10.1088%2F1748-0221%2F3%2F08%2Fs08003},
+	year = 2008,
+	month = {aug},
+	publisher = {{IOP} Publishing},
+	volume = {3},
+	number = {08},
+	pages = {S08003--S08003},
+	author = {The ATLAS Collaborations},
+	title = {The {ATLAS} Experiment at the {CERN} Large Hadron Collider},
+	journal = {Journal of Instrumentation},
+	abstract = {The ATLAS detector as installed in its experimental cavern
+at point 1 at CERN is described in this paper. A brief overview of
+the expected performance of the detector when the Large Hadron
+Collider begins operation is also presented.}
+}
 @book{Apollinari:2284929,
       author        = "Apollinari G. and Béjar Alonso I. and Brüning O. and
                        Fessia P. and Lamont M. and Rossi L. and Tavian L.",
