--- a/dthesis_template/bib/IOPEXPORT_BIB.bib
+++ b/dthesis_template/bib/IOPEXPORT_BIB.bib
@@ -15,3 +15,27 @@ at point 1 at CERN is described in this paper. A brief overview of
 the expected performance of the detector when the Large Hadron
 Collider begins operation is also presented.}
 }
+@book{Apollinari:2284929,
+      author        = "Apollinari G. and Béjar Alonso I. and Brüning O. and
+                       Fessia P. and Lamont M. and Rossi L. and Tavian L.",
+      title         = "{High-Luminosity Large Hadron Collider (HL-LHC): Technical
+                       Design Report V. 0.1}",
+      publisher     = "CERN",
+      address       = "Geneva",
+      series        = "CERN Yellow Reports: Monographs",
+      year          = "2017",
+      url           = "https://cds.cern.ch/record/2284929",
+      doi           = "10.23731/CYRM-2017-004",
+}
+@techreport{Collaboration:2285585,
+      author        = "Collaboration, ATLAS",
+      title         = "{Technical Design Report for the ATLAS Inner Tracker Pixel
+                       Detector}",
+      institution   = "CERN",
+      address       = "Geneva",
+      number        = "CERN-LHCC-2017-021. ATLAS-TDR-030",
+      month         = "Sep",
+      year          = "2017",
+      reportNumber  = "CERN-LHCC-2017-021",
+      url           = "https://cds.cern.ch/record/2285585",
+}
