--- a/dthesis_template/inputs/bibliography.tex
+++ b/dthesis_template/inputs/bibliography.tex
@@ -1,3 +1,4 @@
 \bibliography{./bib/IOPEXPORT_BIB}
-\bibliography{./bib/HLLHC_BIB}
-\bibliography{./bib/ITK_BIB}
+\bibliographystyle{junsrt}
+%\bibliography{./bib/HLLHC_BIB}
+%\bibliography{./bib/ITK_BIB}
