--- a/dthesis_template/inputs/Setup.tex
+++ b/dthesis_template/inputs/Setup.tex
@@ -1,7 +1,8 @@
 \chapter{粒子線に対する応答評価試験のための読み出しシステムの動作確認}
-この章では，粒子線に対する応答評価試験のために行なった，外部トリガを処理する機能の追加と，応答評価試験のための準備について述べる．
+本研究では，粒子線に対する応答評価試験のため，ファームウエアに外部トリガを処理する機能の追加を行なった．この章では，\ref{sec:setup}節で読み出し試験のセットアップ概要，\ref{sec:scans}節で機能を追加したファームウェアが正しく動作しているかの確認について述べる．
 
 \section{読み出しセットアップ概要}
+\label{sec:setup}
 以下に読み出しシステムの概要を示す．主にRD53A搭載のSingle Chip Card（SCC）とFPGAボード，PCを用いて読み出しシステムを構成している．今回は読み出しASICとFPGAボードは，HPC-mDP変換ボードを用いてケーブルにて接続を行い，FPGA内部でASICからのデータ信号の処理を行なった．また，高速通信用インターフェースでPCとFPGAボードを接続し，データ転送を行なった．\par
 
 \begin{figure}[h]
@@ -12,10 +13,10 @@
 \end{figure}
 
 \subsection*{PC}
-PCからPCIeによって接続されたFPGAボードに制御コマンドを送る．また，FPGAボードからきたデータを整理する．DAQの基本的なソフトウェアとファームウェアはYARRのDAQシステムを用いた．YARRは読み出しシステムの構築と性能向上を目指すオープンソースプロジェクトである．
+PCからPCIeによって接続されたFPGAボードに制御コマンドを送る．また，FPGAボードからきたデータを整理する．DAQの基本的なソフトウェアとファームウェアはYARRのDAQシステムを用いた．YARRとは読み出しシステムの構築と性能向上を目指すオープンソースプロジェクトである．
 
 \subsection*{FPGAボード}
-Xilinx, Inc.のKintex-7 FPGA搭載KC705評価ボードを使用．このFPGAボードは，研究室規模の実験で使うことを想定しているため，FPGA評価ボードは一般的に流通してて入手性がよいため，このFPGAボードを使用している．また，KC705はPCIe通信に対応し，PCとPCIe間では5.12 $\mathrm{Gbps}$の通信速度に対応している．今回はYARRのシステムに外部トリガを受信，処理を行う機能を追加し，RD53Aの出力するHitOR信号を用いて，外部トリガを受信できているかを確認した．
+Xilinx, Inc.のKintex-7 FPGA搭載KC705評価ボードを使用した．このFPGAボードは，研究室規模の実験で使うことを想定していることから，一般的に流通していて入手性がよいため，このFPGAボードを使用している．また，KC705はPCIe通信に対応し，PCとPCIe間では5.12 $\mathrm{Gbps}$の通信速度に対応している．今回はYARRのシステムに外部トリガを受信，処理を行う機能を追加し，RD53Aの出力するHitOR信号を用いて，外部トリガを受信できているかを確認した．
 
 \subsection*{アダプタカード}
 ASICはDP-mDPケーブルからmDP-HPCアダプタカードを通してFPGAボードに接続される．
@@ -86,7 +87,8 @@ $\beta$線の今回用いた$\beta$線源は2017/02/13時点で$ 5.00 \times 10^
 
 
 \section{伝達確認}
-ソーススキャンを行うために，既存のKC705用YARRファームウェアに外部トリガを処理する機能を追加した．本節では，機能を追加したファームが外部トリガを受信確認について述べる．
+\label{sec:scans}
+ソーススキャンを行うために，既存のKC705用YARRファームウェアに外部トリガを処理する機能を追加した．本節では，機能を追加したファームが外部トリガの受信確認について述べる．
 
 \subsection{コマンド信号とデータ信号の確認}
 オシロスコープでコマンド信号とデータ信号をRD53A SCC上でプローブし，波形を確認した．
@@ -102,7 +104,7 @@ $\beta$線の今回用いた$\beta$線源は2017/02/13時点で$ 5.00 \times 10^
 
 
 \subsection{アナログスキャン}
-アナログ回路に複数回擬似パルスを注入して，注入した回路のうち何回応答が返ってくるのかを確認した．この作業をアナログスキャンと呼ぶ．今回はDiff FEのみを使用するので，その他のフロントエンドは，グローバルレジスタの''EnCoreColSync1/2''，''EnCoreColEnLin1/2''を全て0にすることで非使用に設定した．また，Diff FE内接続されているピクセルセンサの上下構造の違いにより，上半分にノイズが多く現れるため，それを防ぐために，Diff FEのアナログ回路のLCC回路の部分をオンにする．これは，グローバルレジスタ''DiffLccEn''という値を0から1に変更し，''DiffLcc''を255にすることでオンにすることができる．図\ref{fig:analog1}にLCC回路をオフにした場合，図\ref{fig:analog2}オンにした場合それぞれのDiff FEのアナログスキャンの結果を示す．LCC回路をオフにすると，上部の横端にノイズが多く発生してしまうため，ASICのピクセルが非使用に設定されてしまう．LCC回路をオンにすることで，ノイズの量が減り，センサの面積を有効に利用することができる．
+アナログ回路に複数回擬似パルスを注入して，注入した回路のうち何回応答が返ってくるのかを確認した．この作業をアナログスキャンと呼ぶ．今回はDiff FEのみを使用するので，その他のフロントエンドは，グローバルレジスタの''EnCoreColSync1/2''，''EnCoreColEnLin1/2''を全て0にすることで非使用に設定した．この時，図\ref{fig:analog1}のように応答のない領域が存在した．これは，バイアスレールによりASICのプリアンプのVirtual GNDによる電位差でセンサのポリシリコン抵抗を介して電流が流れている影響だと考えられられており，Diff FEアナログ回路のLCC回路をオンにすることで改善することが知られている．本論文では，グローバルレジスタ値の''DiffLccEn''を0から1に変更し，''DiffLcc''を255にすることでLCC回路をオンにし，電圧をかけた．LCC回路をオンにした場合のアナログスキャンの様子を図\ref{fig:analog2}に示す．オフの場合と比較すると，応答のない領域が改善されているのがわかる．
 
 \begin{figure}[h]
   \centering
@@ -146,33 +148,44 @@ $\beta$線の今回用いた$\beta$線源は2017/02/13時点で$ 5.00 \times 10^
 \end{eqnarray}
 
 
-閾値チューニング前後の各ピクセルの閾値のヒストグラムを図\ref{fig:ThrDistBefore}に示す．目標値は2500$\mathrm{e}$と設定した．2500$\mathrm{e}$という閾値は，センサの厚みとノイズ信号の大きさを考慮した値である．今回使用したセンサの厚みは，150 $\mathrm{\mu m}$であり，式\ref{eq:thr}の厚み300 $\mathrm{\mu m}$の場合のおよそ$1/2$であるため，全て空乏化した場合に発生する信号は10000 $\mathrm{e}$である．まず，この信号をASICが読み出す際に，4分割されてしまったとしても，検出してほしいために閾値は2400 $\mathrm{e}$以下であることが望ましい．また，ノイズ$\sigma$の大きさに対して6-7 $\sigma$離れている必要があるため，バイアスレール有りの場合，$\sigma = 200 \mathrm{e}$と知られているため，1200 $\mathrm{e}$以上にすることが望ましい．閾値のヒストグラムを見ると，1200 $\mathrm{e}$にチューニングした場合は，1200 $\mathrm{e}$以下まで多く分布してしまっているため，今回は分布が1200 $\mathrm{e}$以上に収まるような，2500 $\mathrm{e}$を目標値としてチューニングを行なった．
+閾値チューニング前後の各ピクセルの閾値のヒストグラムを図\ref{fig:ThrDistBefore}に示す．目標値は2400$\mathrm{e}$と設定した．2400$\mathrm{e}$という閾値は，センサの厚みとノイズ信号の大きさを考慮した値である．今回使用したセンサの厚みは，150 $\mathrm{\mu m}$であり，式\ref{eq:thr}の厚み300 $\mathrm{\mu m}$の場合のおよそ$1/2$であるため，全て空乏化した場合に発生する信号は10000 $\mathrm{e}$である．まず，この信号をASICが読み出す際に，4分割されてしまったとしても，検出してほしいために閾値は2400 $\mathrm{e}$以下であることが望ましい．また，ノイズ$\sigma$の大きさに対して6-7 $\sigma$離れている必要があるため，バイアスレール有りの場合，$\sigma = 200 \mathrm{e}$と知られているため，1200 $\mathrm{e}$以上にすることが望ましい．閾値のヒストグラムを見ると，1200 $\mathrm{e}$にチューニングした場合は，1200 $\mathrm{e}$以下まで多く分布してしまっているため，今回は分布が1200 $\mathrm{e}$以上に収まるような，2500 $\mathrm{e}$を目標値としてチューニングを行なった．
 
 \subsection{ノイズスキャン}
 任意の周波数でトリガを発行し，その全トリガ数に対するのアナログ回路から何回応答が返ってくるのかを確認する．この作業をノイズスキャンと呼ぶ．ピクセルセンサが粒子線以外の信号に対して反応していないことを確認するために有効である．\par
-この作業によって，粒子線以外の信号に対して反応している部分は非使用に設定される．引き続きDiff FEのみを使用した．任意の周波数でトリガを送り，その時のアナログ回路からの応答に対して，閾値を超えるものを非使用に設定する．この作業をノイズスキャンと呼ぶ．今回は20000 $\mathrm{Hz}$で5分間ノイズスキャンを3回行なった．以下にノイズスキャンを行う前と行なった後のOccupancy MapとEnable Pixel Mapを示す．図\ref{fig:enablemap}より，，非使用になっているピクセルが上半分に集中しているのが見て取れる．これは，センサ単体の試験で必要となるバイアスレールが上半分に横向きに配置されているため，ノイズの多いASICのFE(Linear FE, Synchronize FE)のノイズが伝わってきていると考えられている．
+この作業によって，粒子線以外の信号に対して反応している部分は非使用に設定される．引き続きDiff FEのみを使用した．任意の周波数でトリガを送り，その時のアナログ回路からの応答に対して，閾値を超えるものを非使用に設定する．この作業をノイズスキャンと呼ぶ．今回は5000 $\mathrm{Hz}$で5分間ノイズスキャンを3回行なった．以下にノイズスキャンを行う前と行なった後のOccupancy MapとEnable Pixel Mapを示す．図\ref{fig:enablemap}より，非使用になっているピクセルが上半分に集中しているのが見て取れる．これは，センサ単体の試験で必要となるバイアスレールの影響であり，バイアスレールが存在すると，図\ref{fig:noisedist}のように，ノイズが増えることが知られている．
 
 \begin{figure}[h]
   \centering
-  \begin{minipage}[b]{0.3\linewidth}
+  \begin{minipage}[b]{0.45\linewidth}
     \centering
-    \includegraphics[width=5cm]{./figure/DigitalScan.png}
-    \subcaption{ノイズスキャン前のOccupancy Map}
+    \includegraphics[width=7cm]{./figure/DigitalScan.png}
+    \subcaption{ノイズスキャン前}
     \label{fig:bfnoise}
   \end{minipage}
-  \begin{minipage}[b]{0.3\linewidth}
+  \begin{minipage}[b]{0.45\linewidth}
     \centering
-    \includegraphics[width=5cm]{./figure/DigitalScan.png}
-    \subcaption{ノイズスキャン後のOccupancy Map}
+    \includegraphics[width=7cm]{./figure/DigitalScan.png}
+    \subcaption{ノイズスキャン後}
     \label{fig:afnoise}
   \end{minipage}
-  \begin{minipage}[b]{0.3\linewidth}
+  \caption{Occupancy Map}
+\end{figure}
+
+\begin{figure}[h]
+  \centering
+  \begin{minipage}[b]{0.45\linewidth}
     \centering
-    \includegraphics[width=5cm]{./figure/DigitalScan.png}
+    \includegraphics[width=7cm]{./figure/DigitalScan.png}
     \subcaption{以降使用したピクセルの分布}
     \label{fig:enablemap}
   \end{minipage}
-  \caption{閾値チューニング}
+  \begin{minipage}[b]{0.45\linewidth}
+    \centering
+    \includegraphics[width=7cm]{./figure/noisedist.png}
+    \subcaption{バイアスレールの有無によるノイズ量比較}
+    \label{fig:noisedist}
+  \end{minipage}
+  \caption{非使用なピクセルとバイアスレールによる影響}
 \end{figure}
 
 
