--- a/dthesis_template/inputs/Detector.tex
+++ b/dthesis_template/inputs/Detector.tex
@@ -112,7 +112,15 @@ p型とn型の半導体が結合されると，接合部における大きなキ
 バンプボンディングの前にセンサのみの試験を行い，動作不良センサを取り除く品質評価の工程がある．このピクセルセンサ評価方法として，IV測定がある．IV測定には全てのピクセルがGNDに落とされている必要があり，また，各ピクセルは分離されている必要がある．そのための構造がバイアスレールとPolySi抵抗である．ピクセル間にバイアスレールを起き，そこから各PolySi抵抗を引くことで，各ピクセルはGNDと同電位とすることができ，各ピクセルは抵抗によって分離される．\par
 
 \subsection{今回使用したシリコンピクセルセンサ構造}
-本論文で扱うピクセルセンサの表面構造について述べる．図\ref{fig:sensor}は，上から見たセンサの様子である．ピクセルセンサは2次元的に電極が配列されており，センサのみのテストのためにバイアスレールが敷かれている．
+本論文で扱うピクセルセンサの表面構造について述べる．図\ref{fig:sensor}は，上から見たセンサの様子である．ピクセルセンサは2次元的に電極が配列されており，センサのみのテストのためにバイアスレールが敷かれている．本論文で用いたピクセルセンサは図\ref{fig:sensor}で示すように，row番号0-96はバイアスレールが存在せず，col番号96-192はバイアスレールが存在する構造になっている．
+
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=7cm]{./figure/sensor.png}
+  \caption{センサの構造．バイアスレールの有無}
+  \label{fig:sensor}
+\end{figure}
+
 
 \section{HL-LHC ATLAS実験用新型ASIC・RD53A}
 \label{sec:rd53a}
