--- a/dthesis_template/inputs/Setup.tex
+++ b/dthesis_template/inputs/Setup.tex
@@ -175,13 +175,13 @@ $\beta$線の今回用いた$\beta$線源は2017/02/13時点で$ 5.00 \times 10^
   \centering
   \begin{minipage}[b]{0.45\linewidth}
     \centering
-    \includegraphics[width=7cm]{./figure/DigitalScan.png}
+    \includegraphics[width=7cm]{./figure/EnablePix.png}
     \subcaption{以降使用したピクセルの分布}
     \label{fig:enablemap}
   \end{minipage}
   \begin{minipage}[b]{0.45\linewidth}
     \centering
-    \includegraphics[width=7cm]{./figure/noisedist.png}
+    \includegraphics[width=6cm]{./figure/noisedist.png}
     \subcaption{バイアスレールの有無によるノイズ量比較}
     \label{fig:noisedist}
   \end{minipage}
