--- a/dthesis_template/inputs/Setup.tex
+++ b/dthesis_template/inputs/Setup.tex
@@ -65,11 +65,15 @@ $\beta$線の今回用いた$\beta$線源は2017/02/13時点で$ 5.00 \times 10^
 \end{equation}
 
 ここで，
-\begin{description}
-\item[] $A_0$：2017/02/13時点での放射能($ 5.00 \times 10^3 \mathrm{Bq}$)
-\item[] $T$：\ce{^{90}Sr}の半減期(28.79 $\mathrm{year}$)
-\item[] $t$：2017/02/13から現在までの時間(25/12 $\mathrm{year}$)
-\end{description}
+\begin{table}[h]
+  \centering
+  \begin{tabular}{cc} \hline
+    $A_0$ & 2017/02/13時点での放射能($ 5.00 \times 10^3 \mathrm{Bq}$)\\
+    $T$ & \ce{^{90}Sr}の半減期(28.79 $\mathrm{year}$)\\
+    $t$ & 2017/02/13から現在までの時間(25/12 $\mathrm{year}$)\\ \hline
+  \end{tabular}
+\end{table}
+
 
 式\ref{eq:radiation}より，現在の放射能$A$は，$4.76 \times 10^3 \mathrm{Bq}$と求まる．
   
