--- a/dthesis_template/inputs/Setup.tex
+++ b/dthesis_template/inputs/Setup.tex
@@ -179,13 +179,13 @@ $\beta$線の今回用いた$\beta$線源は2017/02/13時点で$ 5.00 \times 10^
   \centering
   \begin{minipage}[b]{0.45\linewidth}
     \centering
-    \includegraphics[width=7cm]{./figure/DigitalScan.png}
+    \includegraphics[width=7cm]{./figure/Noisebf.png}
     \subcaption{ノイズスキャン前}
     \label{fig:bfnoise}
   \end{minipage}
   \begin{minipage}[b]{0.45\linewidth}
     \centering
-    \includegraphics[width=7cm]{./figure/DigitalScan.png}
+    \includegraphics[width=7cm]{./figure/Noiseaf.png}
     \subcaption{ノイズスキャン後}
     \label{fig:afnoise}
   \end{minipage}
