--- a/dthesis_template/inputs/Detector.tex
+++ b/dthesis_template/inputs/Detector.tex
@@ -113,7 +113,15 @@ p型とn型の半導体が結合されると，接合部における大きなキ
 
 \subsection{バイアス構造}
 シリコンピクセルセンサには，製造時に良品不良品を選別するための高電圧用のバイアス構造が備わっている．\par
-バンプボンディングの前にセンサのみの試験を行い，動作不良センサを取り除く品質評価の工程がある．このピクセルセンサ評価方法として，IV測定がある．IV測定には全てのピクセルがGNDに落とされている必要があり，また，各ピクセルは分離されている必要がある．そのための構造がバイアスレールとPolySi抵抗である．ピクセル間にバイアスレールを起き，そこから各PolySi抵抗を引くことで，各ピクセルはGNDと同電位とすることができ，各ピクセルは抵抗によって分離される．\par
+バンプボンディングの前にセンサのみの試験を行い，動作不良センサを取り除く品質評価の工程がある．このピクセルセンサ評価方法として，IV測定がある．IV測定には全てのピクセルがGNDに落とされている必要があり，また，各ピクセルは分離されている必要がある．そのための構造がバイアスレールとPolySi抵抗である．ピクセル間にバイアスレールを起き，そこから各PolySi抵抗を引くことで，各ピクセルはGNDと同電位とすることができ，各ピクセルは抵抗によって分離される．このバイアスレールが存在すると，図\ref{fig:bias}のように，センサのノイズが増加することが知られている．
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=8cm]{./figure/noisedist.png}
+  \caption{バイアスレール の有無によるノイズ量比較}
+  \label{fig:bias}
+\end{figure}
+
+
 
 \subsection{今回使用したシリコンピクセルセンサ構造}
 本論文で扱うピクセルセンサの表面構造について述べる．図\ref{fig:sensor}は，上から見たセンサの様子である．ピクセルセンサは2次元的に電極が配列されており，センサのみのテストのためにバイアスレールが敷かれている．本論文で用いたピクセルセンサは図\ref{fig:sensor}で示すように，row番号0-96はバイアスレールが存在せず，col番号96-192はバイアスレールが存在する構造になっている．
@@ -171,7 +179,7 @@ RD53Aはプロトタイプ版のため，Synchronous Frontend, Linear Frontend, 
 
 \begin{figure}[h]
 \centering
-\includegraphics[width=12cm]{./figure/RD53A_DiffFE.png}
+\includegraphics[width=15cm]{./figure/RD53A_DiffFE.png}
 \caption{Diff FEのアナログ回路構造}
 \label{fig:DiffFE}
 \end{figure}
