--- a/dthesis_template/inputs/Setup.tex
+++ b/dthesis_template/inputs/Setup.tex
@@ -173,7 +173,7 @@ $\beta$線の今回用いた$\beta$線源は2017/02/13時点で$ 5.00 \times 10^
 
 \subsection{ノイズスキャン}
 任意の周波数でトリガを発行し，その全トリガ数に対するのアナログ回路から何回応答が返ってくるのかを確認する．この作業をノイズスキャンと呼ぶ．ピクセルセンサが粒子線以外の信号に対して反応していないことを確認するために有効である．\par
-この作業によって，粒子線以外の信号に対して反応している部分は非使用に設定される．引き続きDiff FEのみを使用した．任意の周波数でトリガを送り，その時のアナログ回路からの応答に対して，閾値を超えるものを非使用に設定する．この作業をノイズスキャンと呼ぶ．今回は5000 $\mathrm{Hz}$で5分間ノイズスキャンを3回行なった．以下にノイズスキャンを行う前と行なった後のOccupancy MapとEnable Pixel Mapを示す．図\ref{fig:enablemap}より，非使用になっているピクセルが上半分に集中しているのが見て取れる．これは，センサ単体の試験で必要となるバイアスレールの影響であり，バイアスレールが存在すると，図\ref{fig:noisedist}のように，ノイズが増えることが知られている．
+この作業によって，粒子線以外の信号に対して反応している部分は非使用に設定される．引き続きDiff FEのみを使用した．任意の周波数でトリガを送り，その時のアナログ回路からの応答に対して，閾値を超えるものを非使用に設定する．この作業をノイズスキャンと呼ぶ．今回は5000 $\mathrm{Hz}$で5分間ノイズスキャンを3回行なった．以下にノイズスキャンを行う前と行なった後のOccupancy MapとEnable Pixel Mapを示す．図\ref{fig:NoiseOcc}より，ノイズスキャン前よりも後の方が，ヒットがあったと認識されたピクセルが少なく，ヒットレートも減少していることがわかる．また，図\ref{fig:enablemap}は赤い部分が今回使用したピクセルであり，，非使用になっているピクセルが上半分に集中しているのが見て取れる．これは，センサ単体の試験で必要となるバイアスレールの影響であり，バイアスレールが存在すると，図\ref{fig:noisedist}のように，ノイズが増えることが知られている．
 
 \begin{figure}[h]
   \centering
@@ -190,29 +190,26 @@ $\beta$線の今回用いた$\beta$線源は2017/02/13時点で$ 5.00 \times 10^
     \label{fig:afnoise}
   \end{minipage}
   \caption{Occupancy Map}
+  \label{fig:NoiseOcc}
 \end{figure}
 
 \begin{figure}[h]
   \centering
-  \begin{minipage}[b]{0.45\linewidth}
-    \centering
-    \includegraphics[width=7cm]{./figure/EnablePix.png}
-    \subcaption{以降使用したピクセルの分布}
-    \label{fig:enablemap}
-  \end{minipage}
-  \begin{minipage}[b]{0.45\linewidth}
-    \centering
-    \includegraphics[width=6cm]{./figure/noisedist.png}
-    \subcaption{バイアスレールの有無によるノイズ量比較}
-    \label{fig:noisedist}
-  \end{minipage}
-  \caption{非使用なピクセルとバイアスレールによる影響}
+  \includegraphics[width=8cm]{./figure/EnablePix.png}
+  \label{fig:enablemap}
+  \caption{今回使用したピクセルの分布}
 \end{figure}
 
 
 \subsection{HitOR信号の伝達確認}
-モジュールの上に$\beta$線源を配置し，オシロスコープでHitOR信号をRD53A SCC上でプローブすることで，波形を確認した．また，FPGAまでHitOR信号が伝わっているかどうか，正常に処理され，そのタイミングでトリガが出力されているかどうかをVivadoのLogic Analyzerを用いて確認した．それが以下の図である．
+モジュールの上に$\beta$線源を配置し，外部トリガを受け取ってデータ取得を行うソフトウェアを動作させた．今回は外部トリガをSCCからのHitOR信号とし，FPGAまでHitOR信号が伝わっているかどうか，正常に処理され，そのタイミングでトリガが出力されているかどうかをVivadoのLogic Analyzerを用いて確認した．それが図\ref{fig:selfwf}である．図中の黄色の点線で囲まれた部分の，''ext\_trig\_i''の信号が0から1へ変化している様子や，''int\_trig''が0から1に変化していることから，HitOR信号を受信し，処理する機能の追加されたファームウェアを実装することができていることが確認できた．
 
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=17cm]{./figure/SelfWF.png}
+  \label{fig:selfwf}
+  \caption{VivadoのLogic AnalyzerでHitOR信号を確認した様子}
+\end{figure}
 
 
 このようにファームウェアに外部トリガを取得し，処理する機能を追加できていることを確認した．
